# AndroidSystemServiceSample

./: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  README.md  adbCmd.md  build.gradle  gradle.properties  settings.gradle  zygot.md
accessibilitymanagersample/: README.md  build.gradle
accessibilitymanagersample/src/main/: AndroidManifest.xml
accoumanagersample/: README.md  build.gradle
activitymanagersample/: README.md  build.gradle
aidldemo/: README.md  build.gradle
aidldemo2/: build.gradle
alarmmanagersample/: build.gradle
audiomanagersample/: README.md  build.gradle
basicaacsample/: README.md  build.gradle  versions.gradle
captioningmanagersample/: README.md  build.gradle
cleanarchitecture/: README.md  build.gradle
clipboardmanagersample/: README.md  build.gradle
doc/: AIDL.md  Binder.md  DVM和JVM.md  Handler.md  Hotfix.md  Touch.md  View.md  activity.md  adbCmd.md  anpai.md  apk瘦身.md  app的启动流程和启动速度优化.md  cmake.md  hashmap.md  history.md  kotlin.md  memory-1.md  myTools.md  thread.md  window.md  zygot.md  分类.md  国学入门：书目及其读法.md  真理.md
gradle/wrapper/: gradle-wrapper.properties
knowledge/: README.md
kotlinapi/: README.md  build.gradle
ndk/: CMakeLists.txt  README.md  build.gradle
ndk/src/androidTest/java/com/shunwang/ndk/: ExampleInstrumentedTest.kt
ndk/src/main/: AndroidManifest.xml
ndk/src/main/cpp/: native-lib.cpp
ndk/src/main/java/com/shunwang/ndk/: MainActivity.kt
ndk/src/main/res/layout/: activity_main.xml
ndk/src/main/res/values/: strings.xml
ndk/src/test/java/com/shunwang/ndk/: ExampleUnitTest.kt
pat/: build.gradle
(+172 files in other folders)
